fixed one more spacing issue wuth css

--- a/src/home/home.css
+++ b/src/home/home.css
@@ -104,6 +104,7 @@ body {
     font-family: 'Indie Flower', cursive;
     font-size: 1.5em;
     color: white;
+    margin-top: 80px;
 }
 
 .no-tasks {
